feat(step2): formatting and setting color variable

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,5 +11,5 @@
 .dark-theme {
   @include carbon--theme($carbon--theme--g100, true);
 
-  background-color: $ui-background;
+  background-color: var(--cds-ui-background);
 }
