--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,9 +1,15 @@
- @import 'carbon-components/scss/globals/scss/css--reset';
- @import '@carbon/type/scss/font-face/mono';
- @import '@carbon/type/scss/font-face/sans';
- @import '@carbon/grid/scss/grid';
- @import '@carbon/themes/scss/themes';
+@import 'carbon-components/scss/globals/scss/css--reset';
+@import '@carbon/type/scss/font-face/mono';
+@import '@carbon/type/scss/font-face/sans';
+@import '@carbon/grid/scss/grid';
+@import '@carbon/themes/scss/themes';
 
- @include carbon--font-face-mono();
- @include carbon--font-face-sans();
- @include carbon--type-reset();
+@include carbon--font-face-mono();
+@include carbon--font-face-sans();
+@include carbon--type-reset();
+
+.dark-theme {
+  @include carbon--theme($carbon--theme--g100, true);
+
+  background-color: var(--cds-ui-background);
+}
