fix(web-components-step-2): color style

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,4 +12,5 @@
   @include carbon--theme($carbon--theme--g100, true);
 
   background-color: var(--cds-ui-background);
+  color: var(--cds-text-01);
 }
