feat(step-5): adding some fixes

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -25,7 +25,7 @@
   color: var(--cds-text-01);
 }
 
-.bx-ce-demo-devenv--tab-panels {
+.bx--tab-panels {
   flex: 1;
   padding: 1rem;
   align-self: stretch;
