feat(tutorial): complete step 1

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,1 +1,6 @@
 // Tutorial styles will go here
+@import 'carbon-components/scss/globals/scss/css--reset';
+@import '@carbon/type/scss/font-face/mono';
+@import '@carbon/type/scss/font-face/sans';
+@import '@carbon/grid/scss/grid';
+@import '@carbon/themes/scss/themes';
