--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -4,3 +4,7 @@
 @import '@carbon/type/scss/font-face/sans';
 @import '@carbon/grid/scss/grid';
 @import '@carbon/themes/scss/themes';
+
+@include carbon--font-face-mono();
+@include carbon--font-face-sans();
+@include carbon--type-reset();
