--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,9 +8,28 @@
 @include carbon--font-face-sans();
 @include carbon--type-reset();
 
+.g10-theme {
+  @include carbon--theme($carbon--theme--g10, true);
+}
+
+.g90-theme {
+  @include carbon--theme($carbon--theme--g90, true);
+}
+
 .dark-theme {
   @include carbon--theme($carbon--theme--g100, true);
 
   background-color: var(--cds-ui-background);
   color: var(--cds-text-01);
+}
+
+*[class$='-theme'] {
+  background-color: var(--cds-ui-background);
+  color: var(--cds-text-01);
+}
+
+.bx--tab-panels {
+  flex: 1;
+  padding: 1rem;
+  align-self: stretch;
 }
