--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable prettier/prettier, no-missing-end-of-source-newline */
 @import 'carbon-components/scss/globals/scss/css--reset';
 @import '@carbon/type/scss/font-face/mono';
 @import '@carbon/type/scss/font-face/sans';
@@ -7,3 +8,10 @@
 @include carbon--font-face-mono();
 @include carbon--font-face-sans();
 @include carbon--type-reset();
+
+.dark-theme {
+  @include carbon--theme($carbon--theme--g100, true);
+
+  background-color: var(--cds-ui-background);
+  color: var(--cds-text-01);
+}
