--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,3 +14,22 @@
   background-color: var(--cds-ui-background);
   color: var(--cds-text-01);
 }
+
+.bx--tab-panels {
+  flex: 1;
+  padding: 1rem;
+  align-self: stretch;
+}
+
+.g10-theme {
+  @include carbon--theme($carbon--theme--g10, true);
+}
+
+.g90-theme {
+  @include carbon--theme($carbon--theme--g90, true);
+}
+
+*[class$='-theme'] {
+  background-color: var(--cds-ui-background);
+  color: var(--cds-text-01);
+}
