--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,3 +7,9 @@
 @include carbon--font-face-mono();
 @include carbon--font-face-sans();
 @include carbon--type-reset();
+@include carbon--theme($carbon--theme--g100, true);
+
+.dark-theme {
+  background-color: var(--cds-ui-background);
+  color: var(--cds-text-01);
+}
